app/film-database/routes/_fdRoutes.scss
@use '/app/base/sass/util/functions' as f;
@use '/app/film-database/scss/fdMixins' as m;

.filmDatabase {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100svh;
  background-color: var(--fd-bc-primary);
  overflow: clip;
  overscroll-behavior: none;
  touch-action: none;
  @media (max-width: 950px) {
    height: auto;
  }
}

.fdUserAccount,
.fdCatalog {
  @include m.grainPsuedo;
}

.fdCatalog {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100svh;
  background-color: var(--fd-bc-primary);
  @include m.fdFontM;
  @media (min-width: 1025px) {
    overflow-y: clip;
  }
  @media (max-width: 1024px) {
    overflow-y: scroll;
    scrollbar-width: none;
  }
}

